[package]
name = "cosmwasm-package-manager"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-code-id-registry = { version = "*", path = "../../contracts/cw-code-id-registry" }

cosm-orc = { version = "2.4.0" }
cosmwasm-std = { version = "1.0.0" }

anyhow = { version = "1.0.51"}
clap = { version = "3.2.22", features = ["derive"] }
env_logger = "0.9.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_yaml = "0.9"

[[bin]]
name = "cpm"
path = "src/main.rs"