[package]
name = "cosmwasm-package-manager"
version = "0.1.0"
edition = "2021"

[features]
optimize = ["cosm-orc/optimize"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-code-id-registry = { version = "*", path = "../../contracts/cw-code-id-registry", features = ["library"] }

cosm-orc = { version = "2.6.0", features = ["chain-reg"] }

cosmwasm-std = { version = "1.0.0" }
cw20-base = "0.15"

# TODO: Once DAO DAO contracts are published to crates.io remove the git refs:
cw-core = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts", features = ["library"] }
cw-proposal-single = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts", features = ["library"]  }
cw-proposal-multiple = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts", features = ["library"]  }
cw20-staked-balance-voting = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts", features = ["library"]  }
cw-core-interface = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
voting = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }

anyhow = { version = "1.0.51"}
clap = { version = "3.2.22", features = ["derive"] }
env_logger = "0.9.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_yaml = "0.9"

[[bin]]
name = "cpm"
path = "src/main.rs"